--- a/myapp/views/patrons/patron_detail.pug
+++ b/myapp/views/patrons/patron_detail.pug
@@ -45,4 +45,4 @@ block content
             td= loan.returned_on
             td
               if !loan.returned_on
-                a.button(href='/loans/' + loan.id) Return Book
+                a.button(href='/books/return_book/' + loan.id) Return Book
